# ModelViewer-Qt

./: .gitignore  AppleSurface.cpp  AppleSurface.h  AssImpMesh.cpp  AssImpMesh.h  AssImpModel.cpp  AssImpModel.h  AssImpModelLoader.cpp  AssImpModelLoader.h  BackgroundColor.cpp  BackgroundColor.h  BackgroundColor.ui  BentHorns.cpp  BentHorns.h  BoundingBox.cpp  BoundingBox.h  BoundingSphere.cpp  BoundingSphere.h  BowTie.cpp  BowTie.h  BoySurface.cpp  BoySurface.h  BreatherSurface.cpp  BreatherSurface.h  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  ClippingPlanesEditor.cpp  ClippingPlanesEditor.h  ClippingPlanesEditor.ui  Cone.cpp  Cone.h  ConeShell.cpp  ConeShell.h  Crescent.cpp  Crescent.h  Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  (+122 more)
.github/vcpkg_overlays/qt/qt5-base/: vcpkg.json
.github/vcpkg_overlays/qt/qt5-winextras/: vcpkg.json
.github/workflows/: build.yml
shaders/: axis.frag  axis.vert  background.frag  background.vert  blinn-phong.frag  blinn-phong.vert  brdf.frag  brdf.vert  clipped_mesh.frag  clipped_mesh.vert  clipping_plane.frag  clipping_plane.vert  debug_quad_depth.frag  face_normal.frag  face_normal.geom  irradiance_convolution.frag  light_cube.frag  light_cube.vert  prefilter.frag  reflection_mapping.frag  reflection_mapping.vert  skybox.frag  skybox.vert  splitScreen.frag  splitScreen.vert  text.frag  text.vert  twoside_per_fragment.frag  twoside_per_fragment.geom  twoside_per_fragment.vert  twoside_per_vertex.frag  twoside_per_vertex.vert  vertex_normal.geom  vertex_normal.vert  wireframe.frag  wireframe.geom  wireframe.vert
textures/envmap/: miramar_bk.tga  miramar_ft.tga  miramar_lf.tga  miramar_up.tga
